# pyrm

./: .gitignore  LICENSE  Makefile  README.md  bob.json  gen_bob.py  project.json  pyproject.toml  setup.py
.github/workflows/: lint.yaml  make.yaml  publish.yaml  publish_release.yaml  pylint.yaml  tag_test.yaml  test.yaml  testpypi.yaml  typecheck.yaml  unit_tests.yaml
cli/: __main__.py  main.py
cli/commands/: clean.py  init.py  install.py  run.py  start.py  uninstall.py
cli/config/: __init__.py
cli/utils/: __init__.py
pyrob/: __init__.py  cli.py
pyrob/commands/: __init__.py  clean.py  init.py  install.py  run.py  uninstall.py
pyrob/config/: __init__.py
pyrob/utils/: __init__.py
scripts/: clear_tags  release
src/: __main__.py  config.py  main.py
src/commands/: __init__.py  clean.py  init.py  install.py  run.py  uninstall.py
src/config/: __init__.py
src/pyrm/: __init__.py  cli.py
src/pyrm/commands/: __init__.py  clean.py  init.py  install.py  run.py  uninstall.py
src/pyrm/config/: __init__.py  vars.py
src/pyrm/utils/: __init__.py  git.py  meta.py  pip.py
src/pyrob/: __init__.py  cli.py
src/pyrob/commands/: __init__.py  clean.py  init.py  install.py  run.py  uninstall.py
src/pyrob/config/: __init__.py  vars.py
src/pyrob/utils/: __init__.py  git.py  meta.py  pip.py  project.py  run.py
src/utils/: __init__.py  create_reqs.py  create_requirements.py  save_reqs.py  save_requirements.py
tests/: test_example.py  test_meta.py  test_run.py  test_utils.py
