[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
authors = [
  {name = "Robert Adams", email = "r0b4dams@gmail.com"},
]
description = "A CLI to manage dependencies in a Python project"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "pyrob"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
pyrob = "pyrob.cli:main"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
