[project]
authors = [{name = "Robert Adams", email = "r0b4dams@gmail.com"}]
description = "A CLI to manage dependencies in a Python project"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "pyrob"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
pyrob = "pyrob.cli:main"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
